--- a/train/configs/model/mamba.yaml
+++ b/train/configs/model/mamba.yaml
@@ -2,10 +2,10 @@ defaults:
   - _self_
   - gpt2model: gpt2-small
   
-_target_: src.mamba.MambaLMHeadModel
+_target_: mamba_core.mamba.MambaLMHeadModel
 _recursive_: True
 config:
-  _target_: src.mamba.MambaConfig
+  _target_: mamba_core.mamba.MambaConfig
   # Mistral's config: # https://github.com/stanford-crfm/mistral/blob/main/conf/models/mistral-small.yaml
   # However, reorder_and_upcast_attn slows things down
   reorder_and_upcast_attn: false
